@@ -38,10 +38,6 @@
 
 #include <config.h>
 
-#ifdef ENABLE_NLS
-# include <libintl.h>
-#endif
-
 
 namespace
 {
@@ -179,11 +175,7 @@ int main(int argc, char** argv)
     Gnome::Conf::init();
     Gtk::Main main_instance (&argc, &argv);
 
-#if ENABLE_NLS
-    bindtextdomain(PACKAGE_TARNAME, REGEXXER_LOCALEDIR);
-    bind_textdomain_codeset(PACKAGE_TARNAME, "UTF-8");
-    textdomain(PACKAGE_TARNAME);
-#endif
+    Util::initialize_gettext(PACKAGE_TARNAME, REGEXXER_LOCALEDIR);
 
     Glib::set_application_name(PACKAGE_NAME);
     register_stock_items();
